--- a/css/java_programming.css
+++ b/css/java_programming.css
@@ -166,7 +166,7 @@ ul li a:hover
 #mainpagecontent
 {
 	height: 650px;
-	background-color: ;
+	background-color: black;
 	margin-top: 280px;
 	border-style: solid;
 	border-width: 1px;
