--- a/css/style.css
+++ b/css/style.css
@@ -409,7 +409,7 @@ button.social
 	z-index: -9;
 	transition: all 0.5s;
 	opacity: 0;
-	background:#111e2d;
+	background:#000000;
 }
 
 .service-wrap::before
